# windows-cleaning-lab

./: Cargo.toml  README.md
src/: helpers.rs  main.rs  run_as_admin.rs  spinner.rs  utils.rs
